css/custom.css
#sidebar, .hero-unit {
	margin-top: 60px;
}
h2 {
	font-size: 1.7em;
}

/* Hidden subtitle anchor fix; issue caused by navbar-fixed-top */
:not(li)>h2, h3, h4 {
	padding-top: 40px; 
	margin-top: -40px;
}
dd+h4 {
	padding-top: 50px;
}
/* / hidden subtitle anchor fix */

/* Sticky footer styles from http://twitter.github.com/bootstrap/examples/sticky-footer-navbar.html */
html, body {
	height: 100%;
}
#wrap {
	min-height: 100%;
	height: auto !important;
	height: 100%;
	margin: 0 auto -60px;
}
#push, footer {
	height: 60px;
}
footer {
	background-color: #f5f5f5;
	box-sizing: border-box; 
	padding: 10px;
	border-top: 1px solid #ccc;
	margin-top: 2em;
}
@media (max-width: 767px) {
	footer {
		margin-left: -20px;
		margin-right: -20px;
		padding-left: 20px;
		padding-right: 20px;
	}
}
@media (min-width: 980px) {
	#wrap > .container-fluid {
		padding-top: 60px;
	}
}
/* /sticky footer */

